Add Docker support and enhance server functionality
- Created .dockerignore to exclude unnecessary files from Docker context.
- Added Dockerfile for building the application image with Node.js.
- Introduced docker-compose.yml for easier service management.
- Updated .env.example with new environment variables for currency conversion.
- Enhanced server.js to include USD to RUB conversion logic and cost calculations.
- Modified public/app.js to display cost information in the chat interface.
- Updated index.html and styles.css for improved UI and SEO content.
- Renamed application to Kimi K2.5 and updated relevant text throughout the app.

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,8 @@ PROXYAPI_KEY=your_key_here
 PROXYAPI_BASE_URL=https://api.proxyapi.ru/openrouter/v1
 OPENROUTER_MODEL=moonshotai/kimi-k2-thinking
 DEFAULT_SYSTEM_PROMPT=
+USD_TO_RUB_RATE=90
+USD_RATE_API=https://open.er-api.com/v6/latest/USD
+USD_RATE_CACHE_MS=600000
+COMMISSION_MULTIPLIER=1.5
 PORT=3000
