Refactor application to integrate OpenRouter API and enhance image handling
- Updated .env.example to reflect new OpenRouter API keys and model.
- Modified server.js to implement OpenRouter client and manage allowed models.
- Enhanced public/app.js to support image uploads and model selection.
- Updated index.html to include model selection dropdown and image upload interface.
- Improved styles.css for better UI/UX related to image previews and uploads.
- Adjusted package.json and package-lock.json to include @openrouter/sdk dependency.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-PROXYAPI_KEY=your_key_here
-PROXYAPI_BASE_URL=https://api.proxyapi.ru/openrouter/v1
-OPENROUTER_MODEL=moonshotai/kimi-k2-thinking
+# OpenRouter (https://openrouter.ai/docs)
+OPENROUTER_API_KEY=your_key_here
+OPENROUTER_API_BASE=https://openrouter.ai/api/v1
+OPENROUTER_MODEL=moonshotai/kimi-k2.5
+# Опционально: для отображения в рейтинге OpenRouter
+OPENROUTER_HTTP_REFERER=
+OPENROUTER_X_TITLE=
 DEFAULT_SYSTEM_PROMPT=
 USD_TO_RUB_RATE=90
 USD_RATE_API=https://open.er-api.com/v6/latest/USD
 USD_RATE_CACHE_MS=600000
 COMMISSION_MULTIPLIER=1.5
 PORT=3000
+# Базовый URL приложения (для ссылок на загруженные изображения в API)
+PUBLIC_URL=http://localhost:3000
