--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@openrouter/sdk": "^0.5.1",
     "dotenv": "^17.2.3",
     "express": "^4.19.2"
   }
