Add blog functionality and new articles
- Integrated a blog section into the application, allowing users to access and read various articles.
- Added multiple blog posts covering topics related to AI and its impact on different industries.
- Updated the homepage to include a blog feed, enhancing user engagement and content visibility.
- Created a new HTML template for blog pages and updated styles for better presentation.
- Modified sitemap.xml to include new blog URLs for improved SEO.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@openrouter/sdk": "^0.5.1",
     "dotenv": "^17.2.3",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "marked": "^15.0.4"
   }
 }
