Enhance backend security and functionality
- Updated .gitignore to include additional environment files for better management of local configurations.
- Expanded README.md to detail the frontend structure and introduce Feature-Sliced Design principles.
- Added SECURITY_AUDIT.md to document security findings and recommendations for the project.
- Modified .env.example to reflect required environment variables for production and development setups.
- Introduced new dependencies in package.json for improved security and validation, including class-validator and helmet.
- Implemented JWT authentication enhancements and rate limiting in various controllers to bolster security measures.

--- a/ai-chat-backend/.env.example
+++ b/ai-chat-backend/.env.example
@@ -1,22 +1,27 @@
-# Auth
-JWT_SECRET=your_jwt_secret_change_in_production
-# Секрет для пополнения баланса (POST /api/admin/top-up с body: adminSecret, userId, tokens)
-ADMIN_SECRET=
-# DB (SQLite). Файл создаётся автоматически.
+# OpenRouter (обязательно)
+OPENROUTER_API_KEY=
+
+# JWT (обязательно в production)
+JWT_SECRET=
+
+# SQLite
 DB_PATH=data.sqlite
 
-# OpenRouter (https://openrouter.ai/docs)
-OPENROUTER_API_KEY=your_key_here
-OPENROUTER_API_BASE=https://openrouter.ai/api/v1
-OPENROUTER_MODEL=moonshotai/kimi-k2.5
-OPENROUTER_HTTP_REFERER=
-OPENROUTER_X_TITLE=
-
-USD_TO_RUB_RATE=90
-USD_RATE_API=https://open.er-api.com/v6/latest/USD
-USD_RATE_CACHE_MS=600000
-COMMISSION_MULTIPLIER=1.5
-
+# Сервер
 PORT=3001
 PUBLIC_URL=http://localhost:3001
 CORS_ORIGIN=http://localhost:3000
+
+# Админ: пополнение баланса (заголовок X-Admin-Key или body.adminSecret)
+ADMIN_SECRET=
+
+# Опционально: OpenRouter метаданные
+# OPENROUTER_HTTP_REFERER=
+# OPENROUTER_X_TITLE=
+# OPENROUTER_MODEL=moonshotai/kimi-k2.5:nitro
+
+# Опционально: курс и комиссия
+# USD_TO_RUB_RATE=90
+# USD_RATE_API=https://open.er-api.com/v6/latest/USD
+# USD_RATE_CACHE_MS=600000
+# COMMISSION_MULTIPLIER=1.5
