--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.env.production
 node_modules
 public/uploads
 dist
