--- a/ai-chat-frontend/package.json
+++ b/ai-chat-frontend/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "marked": "^15.0.4"
+    "isomorphic-dompurify": "^3.0.0-rc.2",
+    "marked": "^17.0.2",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "typescript": "^5.7.2"
   }
 }
