Refactor Docker setup and environment configurations
- Updated Dockerfiles for both backend and frontend to streamline the build process and improve development efficiency.
- Modified docker-compose files to utilize environment variables for port configurations and backend/frontend service settings.
- Enhanced .gitignore to include additional environment files for better management of local configurations.
- Removed obsolete .env.example file to simplify environment setup for new developers.
- Updated README.md to reflect changes in environment variable usage and Docker commands for running the application.

--- a/ai-chat-backend/Dockerfile
+++ b/ai-chat-backend/Dockerfile
@@ -9,16 +9,15 @@ COPY package.json package-lock.json* ./
 RUN npm ci
 
 COPY . .
-RUN npm run build
-RUN npm prune --production
+RUN npm run build && npm prune --production
 
 FROM node:24-alpine
 
 WORKDIR /app
 
+COPY --from=builder /app/package.json ./
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./
 COPY --from=builder /app/blog ./blog
 
 RUN mkdir -p public/uploads logs
