--- a/ai-chat-frontend/Dockerfile
+++ b/ai-chat-frontend/Dockerfile
@@ -3,13 +3,14 @@ FROM node:24-alpine AS builder
 WORKDIR /app
 
 COPY package.json package-lock.json* ./
+
+# Обязательно задать через build args (например в .env или docker-compose)
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+
 RUN npm ci
 
 COPY . .
-
-ARG NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:3001}
-
 RUN npm run build
 
 FROM node:24-alpine
