--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,31 +1,30 @@
 # Development (hot reload)
 services:
   backend:
-    image: node:24-bookworm-slim
-    working_dir: /app
+    build:
+      context: ./ai-chat-backend
+      dockerfile: Dockerfile.dev
     ports:
       - "3001:3001"
-    env_file:
-      - ./ai-chat-backend/.env
     environment:
       - NODE_ENV=development
-      - PORT=3001
-      - PUBLIC_URL=http://localhost:3001
-      - CORS_ORIGIN=http://localhost:3000
-      - npm_config_python=/usr/bin/python3
+      - PORT=${BACKEND_PORT}
+      - PUBLIC_URL=${PUBLIC_URL}
+      - CORS_ORIGIN=${CORS_ORIGIN}
     volumes:
       - ./ai-chat-backend:/app
       - backend_node_modules:/app/node_modules
-    command: sh -c "apt-get update && apt-get install -y --no-install-recommends python3 make g++ python3-distutils && rm -rf /var/lib/apt/lists/* && mkdir -p public/uploads logs && npm install && npm run start:dev"
+    command: sh -c "npm install && npm run start:dev"
 
   frontend:
-    image: node:24-alpine
-    working_dir: /app
+    build:
+      context: ./ai-chat-frontend
+      dockerfile: Dockerfile.dev
     ports:
-      - "3000:3000"
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     environment:
       - NODE_ENV=development
-      - NEXT_PUBLIC_API_URL=http://localhost:3001
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
     volumes:
       - ./ai-chat-frontend:/app
       - frontend_node_modules:/app/node_modules
