--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,32 @@
 # Production
 services:
   backend:
+    env_file:
+      - ./ai-chat-backend/.env
     build:
       context: ./ai-chat-backend
       dockerfile: Dockerfile
     ports:
-      - "3001:3001"
-    env_file:
-      - ./ai-chat-backend/.env
+      - "${BACKEND_PORT}:${BACKEND_PORT}"
     environment:
-      - NODE_ENV=production
-      - PORT=3001
-      - PUBLIC_URL=${PUBLIC_URL:-http://localhost:3001}
-      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:3000}
-    restart: unless-stopped
+      - PORT=${BACKEND_PORT}
+      - PUBLIC_URL=${PUBLIC_URL}
+      - CORS_ORIGIN=${CORS_ORIGIN}
     volumes:
       - backend_uploads:/app/public/uploads
       - backend_logs:/app/logs
+    restart: unless-stopped
 
   frontend:
+    env_file:
+      - ./ai-chat-frontend/.env
     build:
       context: ./ai-chat-frontend
       dockerfile: Dockerfile
       args:
-        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:3001}
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     depends_on:
       - backend
     restart: unless-stopped
